# lenso-organization-module

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tegami.config.mjs  tsconfig.json
.github/workflows/: ci.yml  publish.yml  release-plan.yml  release.yml
.lenso-release/: config.json  shadow.json  template-manifest.json
crates/organization/: Cargo.toml
crates/organization/migrations/: 0001_create_organization_schema.sql
crates/organization/src/: admin.rs  audit.rs  dto.rs  lib.rs  migrations.rs  models.rs  module.rs  public.rs  repositories.rs  routes.rs
crates/organization/tests/: organization.rs
docs/agents/: issue-tracker.md
docs/superpowers/plans/: 2026-07-03-organization-console.md  2026-07-03-organization-module.md
