[workspace]
resolver = "2"
members = ["crates/organization"]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.94"

[workspace.dependencies]
async-trait = "0.1"
auth = { package = "lenso-module-auth", version = "0.1.6" }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
getrandom = "0.4"
platform-core = { package = "lenso-platform-core", version = "0.1.4" }
platform-http = { package = "lenso-platform-http", version = "0.1.2" }
platform-module = { package = "lenso-platform-module", version = "0.1.2" }
platform-runtime = { package = "lenso-platform-runtime", version = "0.1.1" }
platform-testing = { package = "lenso-platform-testing", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "chrono", "json"] }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
utoipa = { version = "5.5", features = ["axum_extras", "chrono", "uuid"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
