[package]
name = "lenso-module-organization"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "First-party organization access module for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso-organization-module"
homepage = "https://github.com/LioRael/lenso-organization-module"
readme = "../../README.md"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "organization", "access"]
rust-version.workspace = true

[lib]
name = "organization"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
auth.workspace = true
axum.workspace = true
chrono.workspace = true
getrandom.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-module.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
utoipa.workspace = true

[dev-dependencies]
platform-runtime.workspace = true
platform-testing.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
